Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/speculative/MissingError.out
MissingError.java:16:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.String)
MissingError.java:9:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.String, java.lang.Integer)
2 errors
